# Alex.Immer-music-service

./: .commitlintrc.json  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .yamllint.yaml  Makefile  README.md  eslint.config.mjs  knip.json  music-sync  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  tsconfig.json  tsconfig.jsonc  turbo.json
.github/workflows/: ci.yml  monorepo-ci.yml  publish-sdk.yml  tag-sdk-release.yml  terraform-apply.yml  terraform-commands.yml  terraform-pr.yml
.husky/: commit-msg  pre-commit
api/: package.json  tsconfig.eslint.json  tsconfig.json  vitest.config.ts
api/docs/: api.doc.yaml
api/scripts/: post-build.js
api/src/: index.ts
api/src/handlers/: auth-session.ts
api/src/services/: client-validator.ts  cookie-signer.ts  parameter-store.ts  secrets-manager.ts
api/src/types/: index.ts
api/src/utils/: cors.ts  logger.ts  response.ts
api/src/utils/__tests__/: cors.test.ts  logger.test.ts  response.test.ts
infrastructure/scripts/: migrate-secrets-to-params.sh  rollback-to-secrets.sh  verify-migration.sh
infrastructure/terraform/local-state/00-backend-setup/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
infrastructure/terraform/remote-state/01-bootstrap/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/remote-state/02-infrastructure/: .terraform.lock.hcl  api-certificate.tf  api-gateway.tf  client-secrets.tf  cloudfront-cors.tf  cloudfront-function.js  cloudfront-keys.tf  cloudfront_public_key.pem  main.tf  outputs.tf  parameter-store.tf  secrets.tf  session.tf  variables.tf
infrastructure/terraform/scripts/: generate_cloudfront_keypair.sh  import_existing_resources.py  setup_secrets.sh
scripts/: __init__.py  music_sync.py  music_sync_cli.py
scripts/tests/: __init__.py  test_file_utils.py  test_metadata_utils.py
scripts/utils/: __init__.py  cache_utils.py  cloudfront_utils.py  config.py  file_utils.py  generate_client_secrets.py  id_utils.py  image_utils.py  manifest_utils.py  metadata_utils.py  secrets_manager.py  tracker_parser.py  upload_cloudfront_key.py  upload_utils.py
