[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-service"
version = "1.0.0"
description = "Automated music catalog management and S3 synchronization tool"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Alex Immer", email = "alex@example.com" }]
keywords = ["music", "s3", "metadata", "sync", "catalog"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "boto3>=1.40.0",
  "mutagen>=1.47.0",
  "pillow>=12.0.0",
  "docopt>=0.6.2",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "pytest-cov>=4.1.0",
  "moto[s3]>=4.2.0",
  "black>=23.0.0",
  "dotenv>=0.9.9",
  "ruff>=0.1.0",
  "mypy>=1.5.0",
  "pyright>=1.1.350",
  "pip-audit>=2.9.0",
  "isort>=5.12.0",
  "bandit>=1.7.5",
  "vulture>=2.10",
  # "interrogate>=1.5.0",
  "pre-commit>=3.5.0",
  "types-PyYAML",
  "types-Pillow",
  "boto3-stubs[s3]>=1.35.0",
]

[project.scripts]
music-sync = "scripts.music_sync:main"
music-sync-cli = "scripts.music_sync_cli:main"

[project.urls]
Homepage = "https://github.com/Alex.Immer/music-service"
Repository = "https://github.com/Alex.Immer/music-service"
Issues = "https://github.com/Alex.Immer/music-service/issues"

# ============================================================================
# Setuptools Configuration
# ============================================================================
[tool.setuptools]
# Explicitly include only the scripts package
packages = ["scripts", "scripts.utils"]

[tool.setuptools.package-data]
scripts = ["py.typed"]

# ============================================================================
# Black - Code Formatter (Prettier equivalent)
# ============================================================================
[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | Music
)/
'''

# ============================================================================
# isort - Import Sorting
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [".venv", "venv", "env", ".eggs", "build", "dist", "Music"]

# ============================================================================
# Ruff - Fast Python Linter (ESLint equivalent)
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"

# Exclude directories
extend-exclude = [".venv", "venv", "env", "build", "dist", "Music", "__pycache__"]

[tool.ruff.lint]
# Enable rule categories
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # bugbear (additional bug detection)
  "C4",  # comprehensions (list/dict/set comprehensions)
  "UP",  # pyupgrade (upgrade syntax for newer Python)
  "ARG", # unused-arguments
  "SIM", # simplify (code simplification)
  "TCH", # type-checking (optimize TYPE_CHECKING imports)
  "PTH", # use-pathlib (prefer pathlib over os.path)
  "N",   # pep8-naming
  "D",   # pydocstyle (docstrings)
  "S",   # bandit (security)
  "T20", # print statements
  "RUF", # Ruff-specific rules
]

# Ignore specific rules
ignore = [
  "D100",   # Missing docstring in public module
  "D104",   # Missing docstring in public package
  "D203",   # 1 blank line required before class docstring
  "D213",   # Multi-line docstring summary should start at the second line
  "S101",   # Use of assert detected (allow in tests)
  "T201",   # print found (we use print for CLI output)
  "S324",   # hashlib.md5() - used for S3 ETag comparison, not cryptography
  "S603",   # subprocess call - check for execution of untrusted input
  "S607",   # Starting a process with a partial executable path
  "S110",   # try-except-pass (common pattern for optional operations)
  "S112",   # try-except-continue (common pattern in loops)
  "S605",   # start-process-with-a-shell (needed for os.system clear screen)
  "ARG001", # unused-function-argument (common in overrides/interfaces)
  "ARG002", # unused-method-argument (common in overrides/interfaces)
  "N802",   # invalid-function-name (allow do_EOF for cmd.Cmd)
  "D415",   # First line should end with a period, question mark, or exclamation point breaks docopt
]

# Allow autofix for specific rule categories
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Tests can use assert and don't need extensive docstrings
"scripts/tests/**/*.py" = ["S101", "D", "ARG"]
# CLI scripts can use print statements and have docopt-style docstrings
"scripts/music_sync.py" = ["T201"]
"scripts/music_sync_cli.py" = ["T201", "D205"] # D205: docopt uses multi-line usage

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================================
# Pyright - Type Checking (Pylance backend, strict mode)
# ============================================================================
[tool.pyright]
include = ["scripts"]
exclude = ["**/node_modules", "**/__pycache__", ".venv", "venv", "build", "dist", "Music"]
pythonVersion = "3.11"
pythonPlatform = "All"

# Strict type checking mode (equivalent to TypeScript strict)
typeCheckingMode = "strict"

# TypedDict access handling for boto3 (incomplete stubs)
reportTypedDictNotRequiredAccess = "none" # boto3 TypedDicts are incomplete - skip check

# Additional strict settings
reportMissingImports = true
reportMissingTypeStubs = false            # Don't fail on missing stubs for third-party
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportOptionalMemberAccess = true
reportOptionalSubscript = true
reportPrivateUsage = true
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportUntypedFunctionDecorator = false    # Allow decorators without types
reportUntypedClassDecorator = false
reportUntypedBaseClass = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportAssertAlwaysTrue = true
reportSelfClsParameterName = true
reportImplicitStringConcatenation = false # Allow implicit string concat
reportUndefinedVariable = true
reportUnboundVariable = true

# Diagnostic rule set overrides
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
strictParameterNoneValue = true

# ============================================================================
# mypy - Type Checking (Alternative type checker)
# ============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_optional = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true

# Global suppressions for third-party library issues
# attr-defined: mutagen APIC attributes lack proper type stubs
# unreachable: false positives from control flow analysis
disable_error_code = ["attr-defined", "unreachable"]

# Per-module options
[[tool.mypy.overrides]]
module = "scripts.tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "mutagen.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true

# ============================================================================
# pytest - Test Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--strict-markers",
  "--tb=short",
  "--cov=scripts/utils",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-fail-under=80",
]
markers = ["unit: Unit tests", "integration: Integration tests", "slow: Slow tests"]
filterwarnings = ["error", "ignore::DeprecationWarning", "ignore::PendingDeprecationWarning"]

# ============================================================================
# coverage - Test Coverage
# ============================================================================
[tool.coverage.run]
source = ["scripts"]
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*", "*/.venv/*"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "def __str__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# bandit - Security Linting
# ============================================================================
[tool.bandit]
exclude_dirs = ["scripts/tests", ".venv", "venv"]
skips = [
  "B101", # assert_used (allow in tests)
]

# ============================================================================
# vulture - Dead Code Detection (Knip equivalent)
# ============================================================================
[tool.vulture]
exclude = [".venv/", "venv/", "build/", "dist/", "Music/"]
min_confidence = 80
paths = ["scripts/"]
ignore_names = ["*_test.py", "test_*.py"]
